:sparkles: 改进升级页面样式

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1229,6 +1229,9 @@ select {
 .break-words {
   overflow-wrap: break-word;
 }
+.break-all {
+  word-break: break-all;
+}
 .rounded-md {
   border-radius: 0.375rem;
 }
