:sparkles: 增加命名规则对照表

--- a/public/css/gallery.css
+++ b/public/css/gallery.css
@@ -1,54 +1,1 @@
-.images-grid {
-  margin: 0 auto;
-}
-.images-grid:after {
-  content: '';
-  display: block;
-  clear: both;
-}
-.grid-sizer,
-.grid-item {
-  padding: 8px;
-  width: calc(50%);
-}
-.grid-item {
-  float: left;
-}
-.grid-item > div {
-  transition: all 0.3s;
-}
-.grid-item > div:hover {
-  margin-top: -5px;
-  box-shadow: 15.8px 21.3px 83.8px rgba(0, 0, 0, 0.07), 102px 137px 196px rgba(0, 0, 0, 0.035);
-}
-@media screen and (min-width: 640px) {
-  .grid-sizer,
-  .grid-item {
-    width: calc(33.333%);
-  }
-}
-@media screen and (min-width: 768px) {
-  .grid-sizer,
-  .grid-item {
-    width: calc(25%);
-  }
-}
-@media screen and (min-width: 1024px) {
-  .grid-sizer,
-  .grid-item {
-    width: calc(20%);
-  }
-}
-@media screen and (min-width: 1280px) {
-  .grid-sizer,
-  .grid-item {
-    width: calc(12.5%);
-  }
-}
-@media screen and (min-width: 1536px) {
-  .grid-sizer,
-  .grid-item {
-    width: calc(10%);
-  }
-}
-
+.images-grid{margin:0 auto}.images-grid:after{clear:both;content:"";display:block}.grid-item,.grid-sizer{padding:8px;width:50%}.grid-item{float:left}.grid-item>div{transition:all .3s}.grid-item>div:hover{box-shadow:15.8px 21.3px 83.8px rgba(0,0,0,.07),102px 137px 196px rgba(0,0,0,.035);margin-top:-5px}@media screen and (min-width:640px){.grid-item,.grid-sizer{width:33.333%}}@media screen and (min-width:768px){.grid-item,.grid-sizer{width:25%}}@media screen and (min-width:1024px){.grid-item,.grid-sizer{width:20%}}@media screen and (min-width:1280px){.grid-item,.grid-sizer{width:12.5%}}@media screen and (min-width:1536px){.grid-item,.grid-sizer{width:10%}}
