表格增加滚动条

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1190,6 +1190,9 @@ select {
 .overflow-y-auto {
   overflow-y: auto;
 }
+.overflow-x-scroll {
+  overflow-x: scroll;
+}
 .overflow-y-scroll {
   overflow-y: scroll;
 }
