--- a/resources/css/common.less
+++ b/resources/css/common.less
@@ -34,6 +34,34 @@ progress::-webkit-progress-value {
     background-color: #5dcafa;
 }
 
+#capacity-progress {
+    progress.green {
+        &::-webkit-progress-value {
+            background: #00ab00;
+        }
+    }
+    progress.yellowgreen {
+        &::-webkit-progress-value {
+            background: yellowgreen;
+        }
+    }
+    progress.yellow {
+        &::-webkit-progress-value {
+            background: #b9b900;
+        }
+    }
+    progress.orange {
+        &::-webkit-progress-value {
+            background: #ff9900;
+        }
+    }
+    progress.red {
+        &::-webkit-progress-value {
+            background: #ff4141;
+        }
+    }
+}
+
 #toast-container {
     & > div {
         font-size: 13px;
